src/core/ws/snapshots/writ__core__ws__tests__dir_1.snap
---
source: src/core/ws/mod.rs
expression: files

---
[
    WsPath(
        "dir_1/c",
    ),
    WsPath(
        "dir_1/d",
    ),
    WsPath(
        "dir_1/dir_a/e",
    ),
]
